Copying code from gta-5-cheats.html.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,172 @@
 <!DOCTYPE html>
-<html>
-   <head>
-      <title>HTML Meta Tag</title>
-      
-   </head>
-   <body>
-      <p>Hello HTML5!</p>
-   </body>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<link rel="stylesheet" href="style.css">
+<title>GTA 5 Cheats</title>
+</head>
+<body>
+<div>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+<a class="navbar-brand" href="#">Gamexor</a>
+</nav>
+<div id="box1">
+<div id="box2">
+<pre>
+<h4>Raise Wanted Level</h4>
+PS: R1, R1, CIRCLE, R2, LEFT, RIGHT, LEFT, RIGHT, LEFT, RIGHT
+Xbox: RB, RB, B, RT, LEFT, RIGHT, LEFT, RIGHT, LEFT, RIGHT
+PC: FUGITIVE
+Phone: 1-999-3844-8483 [1-999-FUGITIVE]
+</pre>
+<pre>
+<h4>Lower Wanted Level</h4>
+PS: R1, R1, CIRCLE, R2, RIGHT, LEFT, RIGHT, LEFT, RIGHT, LEFT
+Xbox: RB, RB, B, RT, RIGHT, LEFT, RIGHT, LEFT, RIGHT, LEFT
+PC: LAWYERUP
+Phone: 1-999-5299-3787 [1-999-LAWYERUP]
+</pre>
+<pre>
+<h4>Max Health and Armor</h4>
+PS: CIRCLE, L1, TRIANGLE, R2, X, SQUARE, CIRCLE, RIGHT, SQUARE, L1, L1, L1
+Xbox: B, LB, Y, RT, A, X, B, RIGHT, X, LB, LB, LB
+PC: TURTLE
+Phone: 1-999-887-853 [1-999-TURTLE]
+</pre>
+<pre>
+<h4>Invincibility (Last 5 minutes)</h4>
+PS: RIGHT, X, RIGHT, LEFT, RIGHT, R1, RIGHT, LEFT, X, TRIANGLE
+Xbox: RIGHT, A, RIGHT, LEFT, RIGHT, RB, RIGHT, LEFT, A, Y
+PC: PAINKILLER
+Phone: 1-999-7246-545-537 [1-999-PAINKILLER]
+</pre>
+<pre>
+<h4>Recharge Special Ability</h4>
+PS: X, X, SQUARE, R1, L1, X, RIGHT, LEFT, X
+Xbox: A, A, X, RB, LB, A, RIGHT, LEFT, A
+PC: POWERUP
+Phone: 1-999-769-3787 [1-999-POWERUP]
+</pre>
+<pre>
+<h4>Give Parachute</h4>
+PS: LEFT, RIGHT, L1, L2, R1, R2, R2, LEFT, LEFT, RIGHT, L1 (PS)
+Xbox: LEFT, RIGHT, LB, LT, RB, RT, RT, LEFT, LEFT, RIGHT, LB (Xbox)
+PC: SKYDIVE
+Phone: 1-999-759-3483 [1-999-SKYDIVE]
+</pre>
+<pre>
+<h4>Give Weapons and Extra Ammo</h4>
+PS: TRIANGLE, R2, LEFT, L1, X, RIGHT, TRIANGLE, DOWN, SQUARE, L1, L1, L1
+Xbox: Y, RT, LEFT, LB, A, RIGHT, Y, DOWN, X, LB, LB, LB
+PC: TOOLUP
+Phone: 1-999-866-587 [1-999-TOOLUP]
+</pre>
+<pre>
+<h4>Drunk Mode</h4>
+PS: TRIANGLE, RIGHT, RIGHT, LEFT, RIGHT, SQUARE, CIRCLE, LEFT
+Xbox: Y, RIGHT, RIGHT, LEFT, RIGHT, X, B, LEFT
+PC: LIQUOR
+Phone: 1-999-547-861 [1-999-LIQUOR]
+</pre>
+<pre>
+<h4>Fast Run</h4>
+PS: TRIANGLE, LEFT, RIGHT, RIGHT, L2, L1, SQUARE
+Xbox: Y, LEFT, RIGHT, RIGHT, LT, LB, X
+PC: CATCHME
+Phone: 1-999-2288-463 [1-999-CATCHME]
+</pre>
+<pre>
+<h4>Fast Swim</h4>
+PS: LEFT, LEFT, L1, RIGHT, RIGHT, R2, LEFT, L2, RIGHT
+Xbox: LEFT, LEFT, LB, RIGHT, RIGHT, RT, LEFT, LT, RIGHT (Xbox)
+PC: GOTGILLS
+Phone: 1-999-4684-4557 [1-999-GOTGILLS]
+</pre>
+<pre>
+<h4>Skyfall (Get dropped from high altitude)</h4>
+PS: L1, L2, R1, R2, LEFT, RIGHT, LEFT, RIGHT, L1, L2, R1, R2, LEFT, RIGHT, LEFT, RIGHT
+Xbox: LB, LT, RB, RT, LEFT, RIGHT, LEFT, RIGHT, LB, LT, RB, RT, LEFT, RIGHT, LEFT, RIGHT
+PC: SKYFALL
+Phone: 1-999-759-3255 [1-999-SKYFALL]
+</pre>
+<pre>
+<h4>Super Jump (Hold jump to go higher)</h4>
+PS: LEFT, LEFT, TRIANGLE, TRIANGLE, RIGHT, RIGHT, LEFT, RIGHT, SQUARE, R1, R2
+Xbox: LEFT, LEFT, Y, Y, RIGHT, RIGHT, LEFT, RIGHT, X, RB, RT
+PC: HOPTOIT
+Phone: 1-999-467-8648 [1-999-HOPTOIT]
+</pre>
+<pre>
+<h4>Moon Gravity</h4>
+PS: LEFT, LEFT, L1, R1, L1, RIGHT, LEFT, L1, LEFT
+Xbox: LEFT, LEFT, LB, RB, LB, RIGHT, LEFT, LB, LEFT
+PC: FLOATER
+Phone: 1-999-356-2837 [1-999-FLOATER]
+</pre>
+<pre>
+<h4>Explosive Melee Attacks</h4>
+PS: RIGHT, LEFT, X, TRIANGLE, R1, CIRCLE, CIRCLE, CIRCLE, L2
+Xbox: RIGHT, LEFT, A, Y, RB, B, B, B, LT
+PC: HOTHANDS
+Phone: 1-999-4684-2637 [1-999-HOTHANDS]
+</pre>
+<pre>
+<h4>Slow Motion Aim (Cycle through 3 levels)</h4>
+PS: SQUARE, L2, R1, TRIANGLE, LEFT, SQUARE, L2, RIGHT, X
+Xbox: X, LT, RB, Y, LEFT, X, LT, RIGHT, A
+PC: DEADEYE
+Phone: 1-999-3323-393 [1-999-DEADEYE]
+</pre>
+<pre>
+<h4>Bang Bang (Explosive bullets)</h4>
+PS: RIGHT, SQUARE, X, LEFT, R1, R2, LEFT, RIGHT, RIGHT, L1, L1, L1
+Xbox: RIGHT, X, A, LEFT, RB, RT, LEFT, RIGHT, RIGHT, LB, LB, LB
+PC: HIGHEX
+Phone: 1-999-444-439 [1-999-HIGHEX]
+</pre>
+<pre>
+<h4>Flaming Bullets</h4>
+PS: L1, R1, SQUARE, R1, LEFT, R2, R1, LEFT, SQUARE, RIGHT, L1, L1
+Xbox: LB, RB, X, RB, LEFT, RT, RB, LEFT, X, RIGHT, LB, LB
+PC: INCENDIARY
+Phone: 1-999-462-363-4279 [1-999-INCENDIARY]
+</pre>
+<pre>
+<h4>Slow Motion (Cycle through 3 levels)</h4>
+PS: TRIANGLE, LEFT, RIGHT, RIGHT, SQUARE, R2, R1
+Xbox: Y, LEFT, RIGHT, RIGHT, X, RT, RB
+PC: SLOWMO
+Phone: 1-999-756-966 [1-999-SLOWMO]
+</pre>
+<pre>
+<h4>Change Weather (Cycle through various options)</h4>
+PS: R2, X, L1, L1, L2, L2, L2, SQUARE
+Xbox: RT, A, LB, LB, LT, LT, LT, X
+PC: MAKEITRAIN
+Phone: 1-999-625-348-7246 [1-999-MAKEITRAIN]
+</pre>
+<pre>
+<h4>Slidey Cars</h4>
+PS: TRIANGLE, R1, R1, LEFT, R1, L1, R2, L1
+Xbox: Y, RB, RB, LEFT, RB, LB, RT, LB
+PC: SNOWDAY
+Phone: 1-999-7669-329 [1-999-SNOWDAY]
+</pre>
+<pre>
+<h4>Access Director Mode</h4>
+PC: JRTALENT
+Phone: 1-999-5782-5368 [1-999-JRTALENT]
+</pre>
+<pre>
+<h4>Black Cellphones (may cause explosions and other effects)</h4>
+Phone: 1-999-367-3767 [1-999-EMPEROR or 1-999-EMP-DROP]
+</pre>
+</div>
+</div>
+    </div>
+
+</body>
 </html>
